# UntitledGame

./: .clang-format  .gitignore  Application.cpp  Application.h  Application.hpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  DeviceQueue.cpp  DeviceQueue.hpp  DirectoryWatcher.cpp  DirectoryWatcher.hpp  Framebuffers.cpp  Framebuffers.hpp  Instance.cpp  Instance.hpp  Log.cpp  Log.h  Log.hpp  Pipeline.cpp  Pipeline.hpp  README.md  RenderPass.cpp  RenderPass.hpp  Shader.cpp  Shader.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  SyncObjects.cpp  SyncObjects.hpp  UniformBuffer.hpp  (+10 more)
SPIRV-Reflect/: CMakeLists.txt
imgui/: CMakeLists.txt
shader/: shader.frag  shader.vert
src/: Application.cpp  Device.cpp  Device.hpp  DeviceQueue.cpp  DirectoryWatcher.cpp  Framebuffers.cpp  Framebuffers.hpp  Instance.cpp  Instance.hpp  Log.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  Shader.cpp  Shader.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  SyncObjects.hpp  UniformBuffer.hpp  Vertex.hpp  Video.cpp  Video.hpp  vulkanfmt.hpp
